Add GCP bucket creation and deletion
